@@ -622,6 +622,7 @@ All (GUI):
 - Add wxCheckListBox::GetCheckedItems() (hartwigw).
 - Add wxAUI_TB_PLAIN_BACKGROUND wxAuiToolBar style (Allann Jones).
 - Fix off by 1 error in wxGenericListCtrl::HitTest() (Daniel Hyams).
+- Make wxGenericDataViewCtrl::SetFont() really work (Laurent Poujoulat).
 
 wxGTK:
 
